recursed-istio.yml
apiVersion: v1
kind: Service
metadata:
  name: recursed
  labels:
    app: recursed
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: recursed
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: recursed
  labels:
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: recursed
        version: v1
    spec:
      containers:
      - name: recursed
        image: gregoryguillou/recursed:0.4.0
        command:
        - ./recursed
        - -istio
        - -remote
        - http://recursed.default.svc.cluster.local:8000
        - -debug
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: recursed
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recursed
spec:
  hosts:
  - "*"
  gateways:
  - recursed
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: recursed
        port:
          number: 8000
---
